tests/errors/lexer/missing_terminating_apost_char.c
// Missing terminating apost char
void main()
{
	'a
	;
}
